changed Flack to Zapochat

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="{{ url_for('index') }}">Flack</a>
+      <a class="navbar-brand" href="{{ url_for('index') }}">Zapochat</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-alt-markup">
         <span class="navbar-toggler-icon"></span>
       </button>
