--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flack</title>
+    <title>Zapochat</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <style>
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="{{ url_for('index') }}">Flack</a>
+      <a class="navbar-brand" href="{{ url_for('index') }}">Zapochat</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-alt-markup">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +43,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h1>Welcome to Flack!</h1>
+              <h1>Welcome to Zapochat!</h1>
             </div>
             <div class="modal-body">
               <p>Enter a display name to begin.</p>
