--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
     </nav>
     <div style="margin: 10px;">
       <h2>About</h2>
-      <p>Flack is a real-time online messaging website where users can create and join different rooms.</p>
+      <p>Zapochat is a real-time online messaging website where users can create and join different rooms.</p>
       <h2>Attributions</h2>
       <a href="https://fontawesome.com/icons/plus-circle?style=solid">"plus-circle"</a> by <a href="https://fontawesome.com/">Font Awesome</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
     </div>
