changed display name info text

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
               <h1>Welcome to Zapochat!</h1>
             </div>
             <div class="modal-body">
-              <p>Enter a display name to begin.</p>
+              <p>Choose a public display name.</p>
               <form id="displayname-modal-form">
                 <div class="input-group">
                   <input type="text" id="enter-displayname" placeholder="Enter a display name" class="form-control">
